--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ aside#toggle-side-container {
   position: absolute;
   top: 0;
   left: 0;
-  width: 160px;
+  width: 15%;
   height: 100%;
   z-index: 1;
   background-color: #111;
@@ -35,11 +35,11 @@ aside#toggle-side-container {
 
 main#primary-content {
   position: absolute;
-  left: 10%;
+  left: 15%;
   top: 0;
-  width: 90%;
+  width: 85%;
   height: 100%;
-  padding: 4rem 6rem;
+  padding: 5rem;
 }
 
 h1 {
@@ -79,7 +79,7 @@ p {
 
 .btn {
   border: none;
-  background-color: #7f5af0;
+  background-color: #2cb67d;
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -108,6 +108,7 @@ button[disabled] {
 
 textarea#password {
   background-color: transparent;
+  color: #fffffe;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -118,7 +119,6 @@ textarea#password {
   font-size: 1.2rem;
   text-align: right;
   border-bottom: 2px solid #c0c7cf;
-  border-radius: 6px;
   resize: none;
   overflow: hidden;
 }
