--- a/styles/style.css
+++ b/styles/style.css
@@ -75,34 +75,25 @@ ul#checkbox-container li input {
   margin-right: 1rem;
 }
 
-div#copy-button-container {
+button#copy-button {
   position: absolute;
   top: -10px;
   right: 0;
   height: 40px;
   width: 40px;
-  border-radius: 50px;
   background-color: #222222;
+  color: white;
+  border: 2px solid #888;
+  border-radius: 50px;
   cursor: pointer;
 }
 
-div#copy-icon-container {
-  height: 100%;
-  width: 100%;
-  position: relative;
-}
-
-#copy-icon-container i {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-}
 
 
 .btn {
   border: none;
   background-color: #2cb67d;
+  border: 1px solid white;
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
