--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ ul#checkbox-container li input {
   margin-right: 1rem;
 }
 
-button#copy-button {
+button#copy {
   position: absolute;
   top: -10px;
   right: 0;
